--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "@types/uuid": "^8.3.0",
+    "i18next": "^19.7.0",
+    "i18next-xhr-backend": "^3.2.2",
     "moment": "^2.27.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.5.3",
+    "react-i18next": "^11.7.2",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
